--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html xmlns='http://www.w3.org/1999/xhtml' xml:lang='fr'>
 
     <head>
-        <link type="text/css" rel="stylesheet"
-            href="http://fonts.googleapis.com/css?family=Reenie+Beanie&amp;subset=latin">
+        <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Reenie+Beanie&amp;subset=latin">
         <meta http-equiv='content-type' content='text/html; charset=ISO-8859-1' />
         <meta http-equiv='content-language' content='en-us' />
         <title>code base</title>
